# NASM-BrainF-Compiler

./: .gitignore  README.md  main.py  optmain.py  pyproject.toml  replit.nix
scripts/: 1.bf  3.bf  amongus.bf  even_odd.bf  hello.bf  tree.bf
