[tool.poetry]
name = "nasm-brainf-compiler"
version = "0.1.0"
description = "Compiles Brainf*** code into NASM assembly and links it to create an executable."
authors = ["Joey Lent (Supercolbat) <supercolbat@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"